--- a/css/normalize.css
+++ b/css/normalize.css
@@ -373,3 +373,10 @@ input[type="radio"], select {
 textarea {
   resize: none;
 }
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
